# RayStrike

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: AssetManager.cpp.5D9B9FB26F8FA808.idx  AssetManager.cpp.80632F8A6E1A610D.idx  AssetManager.h.2462793EECA6DF1B.idx  AssetManager.h.CE8E358289B2C4EE.idx  CreateLobbyState.cpp.2208C9ECC824B5B1.idx  CreateLobbyState.cpp.4F72B9F7ADA42B09.idx  CreateLobbyState.h.CFA4B4678B04D4FF.idx  CreateLobbyState.h.FDFAED1F53388781.idx  Game.cpp.487562E2395B0F94.idx  Game.cpp.C2A5553C2382AB36.idx  Game.h.A4BD285C0DBF7F88.idx  Game.h.CB76C3DFD934DDF9.idx  GameConfig.h.2F4A342CE4359C1D.idx  GameConfig.h.CDF3A31E3A0C0A66.idx  GameEngine.cpp.2647F361EF2E9906.idx  GameEngine.cpp.FCC0A3466A52375F.idx  GameEngine.h.6528E7D8B73E2D1D.idx  GameEngine.h.8EBD99AD4811294B.idx  GameStateManager.cpp.46B0C384E4033071.idx  GameStateManager.cpp.A311EA726A3179FB.idx  GameStateManager.h.4F9A53BF5CEC1062.idx  (+73 more)
docs/: engine.md  game.md  lobby.md  multithreading.md  networking.md
src/: CreateLobbyState.cpp  CreateLobbyState.h  Game.cpp  Game.h  GameStateManager.h  GameplayState.cpp  GameplayState.h  GameplayStateGuest.h  InputManager.cpp  InputManager.h  JoinLobbyState.cpp  JoinLobbyState.h  LabeledTextField.cpp  LabeledTextField.h  LobbyState.cpp  LobbyState.h  LobbyWaitingState.cpp  LobbyWaitingState.h  MenuState.cpp  MenuState.h  NetworkGameManager.cpp  NetworkGameManager.h  NetworkManager.cpp  NetworkManager.h  SettingsState.cpp  SettingsState.h  SoundManager.cpp  SoundManager.h  State.h  Tesseract.h  TextField.cpp  TextField.h  main.cpp
src/StateEngine/: InputManager.cpp
src/engine/: AssetManager.cpp  AssetManager.h  Game.cpp  GameStateManager.cpp  InputManager.cpp  InputManager.h
src/network/: NetworkGameManager.cpp  NetworkLobbyManager.cpp  NetworkLobbyManager.h  NetworkManager.cpp  UdpNetworkManager.cpp  UdpNetworkManager.h
src/states/: CreateLobbyState.cpp  GameplayState.cpp  GameplayTestState.cpp  GameplayTestState.h  JoinLobbyState.cpp  LobbyState.cpp  LobbyState.h  LobbyWaitingState.cpp  LobbyWaitingState.h  SettingsState.cpp  SettingsState.h
src/utills/: GameConfig.h  LobbyConfig.h  Tesseract.cpp  Tesseract.h  TextField.cpp  TextField.h
(+21 files in other folders)
